--- a/package.json
+++ b/package.json
@@ -8,27 +8,34 @@
     "copy:public": "cp -r -v src/public dist/",
     "copy:views": "cp -r -v src/views dist/",
     "move:public": "mv -i -v src/public dist/",
-    "remove:src":"rm -v -rf src",
-    "watch:dev": "nodemon --watch src --delay 1 --exec ts-node src/bin/www.ts"
+    "remove:src": "rm -v -rf src",
+    "dev:watch": "nodemon --watch src --delay 1 --exec ts-node src/bin/www.ts"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "helmet": "^4.2.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.8",
     "@types/http-errors": "^1.8.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.14.5",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
-  "engines": {"node": "v12.18.1"}
+  "engines": {
+    "node": "v14.14.0"
+  }
 }
